base/staging/patchats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patchats
  namespace: staging
spec:
  selector:
    app: patchats
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 8080
