base/staging/patchats/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: patchats-vpn-web
  namespace: staging
spec:
  entryPoints:
    - web-vpn
  routes:
    - match: Host(`stg.patchats.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: patchats
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: patchats-vpn-websecure
  namespace: staging
spec:
  entryPoints:
    - websecure-vpn
  routes:
    - match: Host(`stg.patchats.vpn.patinanetwork.org`) && PathPrefix(`/actuator/env`)
      kind: Rule
      priority: 10
      middlewares:
        - name: basic-auth
      services:
        - name: patchats
          port: 80
    - match: Host(`stg.patchats.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: patchats
          port: 80
  tls:
    secretName: staging-patchats-vpn-tls
